# app/Http/Controllers/Api/v1/PageController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers\Api\v1;
 
 use App\Http\Controllers\Controller;
+use App\Http\Requests\Page\IndexRequest;
 use App\Http\Resources\Page\PageResource;
 use App\Services\Pages\PageService;
 use App\Services\Response\ResponseService;
@@ -15,11 +16,22 @@ class PageController extends Controller
      * Display a listing of the resource.
      *
      * @OA\Get(
-     *      path="/api/v1/page/",
+     *      path="/api/v1/page/{lang}",
      *      operationId="page.index",
      *      tags={"Страница"},
      *      summary="Получение страницы",
      *      description="Получение страницы",
+     *
+     *      @OA\Parameter(
+     *            name="lang",
+     *            description="язык страницы",
+     *            required=true,
+     *            in="path",
+     *            @OA\Schema(
+     *                type="string",
+     *                example="ru"
+     *            ),
+     *      ),
      *
      *      @OA\Response(
      *          response=200,
@@ -37,9 +49,11 @@ class PageController extends Controller
     public function index(
         ResponseService $responseService,
         PageService $pageService,
+        IndexRequest $request
     ): JsonResponse
     {
-        $pages = $pageService->index();
+        $validated = $request->validated();
+        $pages = $pageService->index($validated['language']);
 
         return $responseService->success([
             PageResource::make($pages['data'])
